compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/classPropertyInConstructor.kt
class C(<!CONFLICTING_JVM_DECLARATIONS!>konst x: Int<!>) {
    <!CONFLICTING_JVM_DECLARATIONS!>fun getX()<!> = 1
}